--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -52,7 +52,7 @@ jobs :
             NAMES="$NAMES $NAME"
           done;
           NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-          OUTPUT=$(echo -e "$NAMES" | jq -R -s -c 'split("\n")[1:]')
+          OUTPUT=$(echo -e "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
           echo "::set-output name=files::$OUTPUT"
           echo -e "::set-output name=files2::"$NAMES""
           echo "::set-output name=files3::"$NAMES""
