--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -54,5 +54,5 @@ jobs :
           NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
           OUTPUT=$(echo -e "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
           echo "::set-output name=files::$OUTPUT"
-      - run: echo "\{ "modules : "${{ steps.workflow_files.outputs.files }}" \}"
+      - run: echo ${{ format( '{ "modules" : {1} }', ${{ steps.workflow_files.outputs.files }} ) }}
       # - run: echo "${{ fromJson( '{ "modules : ${{ steps.workflow_files.outputs.files }} }' ) }}"
