--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -40,7 +40,6 @@ jobs :
   get:
     outputs :
       workflow_files: ${{ steps.workflow_files.outputs.files }}
-      workflow_names: ${{ steps.workflow_names.outputs.names }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -54,8 +53,10 @@ jobs :
           NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
           OUTPUT=$(echo -e "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
           echo "::set-output name=files::$OUTPUT"
-      - run: echo ${{ steps.workflow_files.outputs.files }}
-      - run: echo ${{ format( '{0}', ${{ steps.workflow_files.outputs.files }} ) }}
-      - run: echo "${{ join( 'abc cab', '\n' ) }}"
-      # - run: echo ${{ format( '{ "modules" : {1} }', ${{ steps.workflow_files.outputs.files }} ) }}
-      # - run: echo "${{ fromJson( '{ "modules : ${{ steps.workflow_files.outputs.files }} }' ) }}"
+
+  test :
+    needs : get
+    uses : dmvict/Test/.github/workflows/Common.yml@master
+    with :
+      matrix : '{ "modules" : ${{ needs.get.outputs.workflow_files }} }'
+
