--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -16,5 +16,5 @@ jobs:
       matrix : ${{ fromJson( inputs.matrix ) }}
     steps :
       - run: echo ${{ matrix.modules }}
-      - run: echo ${{ join( fromJson( inputs.matrix ).modules )}}
+      - run: echo ${{ join( fromJson( inputs.matrix ).modules, '\n' )}}
 
