--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -16,5 +16,6 @@ jobs:
       matrix : ${{ fromJson( inputs.matrix ) }}
     steps :
       - run: echo ${{ matrix.modules }}
-      - run: echo ${{ join( fromJson( inputs.matrix ).modules, '\n' )}}
+      - run: echo -e ${{ join( fromJson( inputs.matrix ).modules, '\n' )}}
+      - run: echo -e ${{ join( fromJson( inputs.matrix ).modules, '\\n' )}}
 
