--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -40,23 +40,33 @@ jobs :
   get:
     outputs :
       workflow_files: ${{ steps.workflow_files.outputs.files }}
+      workflow_names: ${{ steps.workflow_names.outputs.names }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - id: workflow_files
         run: |
-          WORKFLOWS=$(ls .github/workflows | grep Common)
+          WORKFLOWS=$(ls .github/workflows | grep Module)
           for WORKFLOW in $WORKFLOWS ; do
             NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
             NAMES="$NAMES $NAME"
           done;
-          NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-          OUTPUT=$(echo -e "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
+          OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split(" ")[1:-1]')
           echo "::set-output name=files::$OUTPUT"
+      - id: workflow_names
+        run: |
+          WORKFLOWS=$(ls .github/workflows | grep Module)
+          for WORKFLOW in $WORKFLOWS ; do
+            NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
+            NAMES="$NAMES $NAME"
+          done;
+          OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split(" ")[1:-1]')
+          echo "::set-output name=names::$OUTPUT"
 
   test :
     needs : get
     uses : dmvict/Test/.github/workflows/Common.yml@master
     with :
       matrix : '{ "modules" : ${{ needs.get.outputs.workflow_files }} }'
+      modules : ${{ needs.get.outputs.workflow_names }}
 
