--- a/.github/workflows/Module2.yml
+++ b/.github/workflows/Module2.yml
@@ -3,7 +3,8 @@ name : module2
 on: push
 
 jobs :
-  runs-on: ubuntu-latest
-  steps:
-    - run: sleep 10
-    - run: echo module2
+  simple:
+    runs-on: ubuntu-latest
+    steps:
+      - run: sleep 10
+      - run: echo module2
