--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -16,6 +16,7 @@ jobs:
   wait_for_modules :
     runs-on : ubuntu-latest
     steps :
+      - run: echo "${{ join( inputs.modules, '\\n' ) }}"
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
         with :
@@ -37,7 +38,7 @@ jobs:
         id : check_ci
         uses :  LASER-Yi/workflow-status@v0.1.0
         with :
-          token : ${{ secrets.PRIVATE_GITHUB_TOKEN }}
+          token : ${{ secrets.PRIVATE_TOKEN }}
           workflow : ${{ matrix.modules }}.yml
           event : push
           branch : alpha
