--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -16,7 +16,7 @@ jobs:
   wait_for_modules :
     runs-on : ubuntu-latest
     steps :
-      - run: echo "${{ join( fromJson( inputs.modules ), '\\n' ) }}"
+      - run: echo -e "${{ join( fromJson( inputs.modules ), '\\n' ) }}"
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
         with :
