--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -15,15 +15,23 @@ on :
 jobs:
   wait_for_modules :
     runs-on : ubuntu-latest
+    env:
+      INPUT_W : ${{ inputs.modules }}
     steps :
+      - run: echo -e "$INPUT_W"
       - run: echo -e "${{ inputs.modules }}"
+      - run: |
+        v=$(echo ${{ inputs.modules }} | sed 's/\s/\n/g')
+        export INPUT_B=$v
+        echo -e "$v"
+      - run: echo "$INPUT_B"
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
         with :
           timeout : 21600
           interval : 10
           initial_delay : 10
-          workflows : ${{ inputs.modules }}
+          workflows : $INPUT_W
 
   check :
     needs : wait_for_modules
