--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -21,9 +21,9 @@ jobs:
       - run: echo -e "$INPUT_W"
       - run: echo -e "${{ inputs.modules }}"
       - run: |
-        v=$(echo ${{ inputs.modules }} | sed 's/\s/\n/g')
-        export INPUT_B=$v
-        echo -e "$v"
+        val=$(echo '${{ inputs.modules }}' | sed 's/\s/\n/g')
+        export INPUT_B=$val
+        echo -e "$val"
       - run: echo "$INPUT_B"
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
