--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -20,13 +20,18 @@ jobs:
     steps :
       - run: echo -e "$INPUT_W"
       - run: echo -e "${{ inputs.modules }}"
+      - run: |
+        v=$( echo ${{ env.$INPUT_W }} | sed 's/\s/\n/g')
+        export INPUT_B=$v
+        echo -e "$v"
+      - run: echo "$INPUT_B"
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
         with :
           timeout : 21600
           interval : 10
           initial_delay : 10
-          workflows : $INPUT_W
+          workflows : ${{ env.$INPUT_W }}
 
   check :
     needs : wait_for_modules
