--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -17,17 +17,18 @@ jobs:
     runs-on : ubuntu-latest
     steps :
       - id: modules
-        run: |
-          modules=$(echo ${{ inputs.modules }} | sed 's/\s/\n/g')
-          export MODULES="$modules"
-          echo "::set-output name=MODULES::"$modules""
+        uses: frabert/replace-string-action@v2.0
+        with:
+          pattern: '(\w+)\s+(\w+)'
+          string: ${{ inputs.modules }}
+          replace-with: '$1\n$2'
       - name : Waiting ...
         uses : willgarcia/workflow-wait-action@main
         with :
           timeout : 21600
           interval : 10
           initial_delay : 10
-          workflows : ${{ steps.modules.outputs.modules }}
+          workflows : ${{ steps.modules.outputs.replaced }}
 
   check :
     needs : wait_for_modules
