--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -8,16 +8,19 @@ jobs:
   contexts:
     runs-on: ubuntu-latest
     steps:
-      - id: output
-        run: |
-          v=$(echo -e 'a\nb')
-          echo -e "$v"
-          echo "::set-output name=var::"$v""
-          echo "::set-output name=var2::$v"
-      - run: echo "${{ toJSON( steps.output ) }}"
-      - run: echo -e "${{ toJSON( steps.output.outputs.var ) }}"
-      - run: echo -e "${{ toJSON( steps.output.outputs.var2 ) }}"
-      - run: echo "${{ toJSON( env ) }}"
+      # - id: output
+      #   run: |
+      #     v=$(echo -e 'a\nb')
+      #     echo -e "$v"
+      #     echo "::set-output name=var::"$v""
+      #     echo "::set-output name=var2::$v"
+      # - run: echo "${{ toJSON( steps.output ) }}"
+      # - run: echo -e "${{ toJSON( steps.output.outputs.var ) }}"
+      # - run: echo -e "${{ toJSON( steps.output.outputs.var2 ) }}"
+      # - run: echo "${{ toJSON( env ) }}"
+      - uses: actions/hello-world-docker-action@main
+        with:
+          who-to-greet: user
 
   # get:
   #   outputs :
