--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -11,7 +11,7 @@ jobs:
   contexts:
     runs-on: ubuntu-latest
     steps:
-      - run: cat ../../_temp/*.sh
+      - run: cat ../../_PipelineMapping/dmvict/Test/PipelineFolder.json
 
   # get:
   #   outputs :
