--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -11,7 +11,10 @@ jobs:
   contexts:
     runs-on: ubuntu-latest
     steps:
-      - run: cat ../../../runners/*/*.sh
+      - id : multiline
+        run : |
+          echo "::set-output name=var::a%0Dn"
+
 
   # get:
   #   outputs :
