--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -17,6 +17,7 @@ jobs:
       - run : echo ${{ steps.multiline.outputs.var }}
       - run : echo "${{ steps.multiline.outputs.var }}"
       - run : echo -e "${{ steps.multiline.outputs.var }}"
+      - run : echo -e "${{ toJSON(steps.multiline) }}"
 
 
   # get:
