--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - id : multiline
         run : |
-          echo "::set-output name=var::a%0Dn"
+          echo "::set-output name=var::a%0D%0An"
       - run : echo ${{ steps.multiline.outputs.var }}
       - run : echo "${{ steps.multiline.outputs.var }}"
       - run : echo -e "${{ steps.multiline.outputs.var }}"
