--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -5,53 +5,37 @@ on: [ push ]
 
 jobs:
 
-  contexts:
+  get:
+    outputs :
+      workflow_files: ${{ steps.workflow_files.outputs.files }}
+      workflow_names: ${{ steps.workflow_names.outputs.names }}
     runs-on: ubuntu-latest
     steps:
-      - id: output
+      - uses: actions/checkout@v2
+      - id: workflow_files
         run: |
-          v=$(echo -e 'a\nb')
-          echo -e "$v"
-          echo "::set-output name=var::"$v""
-          echo "::set-output name=var2::$v"
-      - run: echo "${{ toJSON( steps.output ) }}"
-      - run: echo -e "${{ toJSON( steps.output.outputs.var ) }}"
-      - run: echo -e "${{ toJSON( steps.output.outputs.var2 ) }}"
-      - env:
-          some: hello
-        run: echo "${{ toJSON( env ) }}"
+          WORKFLOWS=$(ls .github/workflows | grep Module)
+          for WORKFLOW in $WORKFLOWS ; do
+            NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
+            NAMES="$NAMES $NAME"
+          done;
+          NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
+          OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
+          echo "::set-output name=files::$OUTPUT"
+      - id: workflow_names
+        run: |
+          WORKFLOWS=$(ls .github/workflows | grep Module)
+          for WORKFLOW in $WORKFLOWS ; do
+            NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
+            NAMES="$NAMES $NAME"
+          done;
+          NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
+          echo "::set-output name=names::"$NAMES""
 
-  # get:
-  #   outputs :
-  #     workflow_files: ${{ steps.workflow_files.outputs.files }}
-  #     workflow_names: ${{ steps.workflow_names.outputs.names }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - id: workflow_files
-  #       run: |
-  #         WORKFLOWS=$(ls .github/workflows | grep Module)
-  #         for WORKFLOW in $WORKFLOWS ; do
-  #           NAME=$(echo $WORKFLOW | sed 's/\(\S\+\).yml/\1/')
-  #           NAMES="$NAMES $NAME"
-  #         done;
-  #         NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-  #         OUTPUT=$(echo "$NAMES" | jq -R -s -c 'split("\n")[1:-1]')
-  #         echo "::set-output name=files::$OUTPUT"
-  #     - id: workflow_names
-  #       run: |
-  #         WORKFLOWS=$(ls .github/workflows | grep Module)
-  #         for WORKFLOW in $WORKFLOWS ; do
-  #           NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
-  #           NAMES="$NAMES $NAME"
-  #         done;
-  #         NAMES=$(sed 's/\s\+/\n/g' <<< $NAMES)
-  #         echo "::set-output name=names::"$NAMES""
-  #
-  # test :
-  #   needs : get
-  #   uses : dmvict/Test/.github/workflows/Common.yml@master
-  #   with :
-  #     matrix : '{ "modules" : ${{ needs.get.outputs.workflow_files }} }'
-  #     modules : ${{ needs.get.outputs.workflow_names }}
+  test :
+    needs : get
+    uses : dmvict/Test/.github/workflows/Common.yml@master
+    with :
+      matrix : '{ "modules" : ${{ needs.get.outputs.workflow_files }} }'
+      modules : ${{ needs.get.outputs.workflow_names }}
 
