--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -27,9 +27,8 @@ jobs:
           WORKFLOWS=$(ls .github/workflows | grep Module)
           for WORKFLOW in $WORKFLOWS ; do
             NAME=$(cat .github/workflows/$WORKFLOW | grep -G '^name :' | sed 's/name\s*:\s\+\(\S*\)/\1/')
-            NAMES="$NAMES $NAME"
+            NAMES="$NAMES%0A$NAME"
           done;
-          NAMES=$(sed 's/\s\+/%0A/g' <<< $NAMES)
           echo "::set-output name=names::$NAMES"
 
   test :
