--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -34,9 +34,9 @@ jobs:
         uses: dmvict/clean-workflow-runs@v1
         with:
           token: ${{ secrets.PRIVATE_TOKEN }}
-          repo: dmvict/wTools
-          branch : ${{ github.event.inputs.branch }}
+          repo: dmvict/${{ inputs.repo }}
+          branch : ${{ inputs.branch }}
           # run_conclusions: ${{ github.event.inputs.conclusion }}
-          save_period: ${{ github.event.inputs.days }}
-          save_min_runs_number: ${{ github.event.inputs.days }}
+          save_period: ${{ inputs.days }}
+          save_min_runs_number: ${{ inputs.days }}
 
