--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -38,5 +38,5 @@ jobs:
           branch : ${{ inputs.branch }}
           workflow_id : ${{ inputs.workflow_id }}
           save_period: ${{ inputs.days }}
-          save_min_runs_number: ${{ inputs.days }}
+          save_min_runs_number: ${{ inputs.save }}
 
