--- a/.github/workflows/Pull.yml
+++ b/.github/workflows/Pull.yml
@@ -8,5 +8,6 @@ jobs :
   fast:
     runs-on : ubuntu-latest
     steps :
+      - run: echo "${{ toJson( github ) }}"
       - run: echo "${{ toJson( github.event ) }}"
 
