--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -1,13 +1,27 @@
 
 name : push2
 
-on :
-  push :
-    branches : [ alpha ]
+# on :
+#   push :
+#     branches : [ alpha ]
+on : push
 
 jobs:
-  success :
-    if : "contains( github.event.head_commit.message, 'build' )"
-    runs-on : ubuntu-latest
-    steps :
-      - run : exit 0
+  job1:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.step.outputs.test }}
+    steps:
+      - id: step
+        uses: Wandalen/wretry.action@master
+        with:
+          attempt_limit: 3
+          action: dmvict/test.action
+
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - env:
+          OUTPUT1: ${{needs.job1.outputs.output1}}
+        run: echo "$OUTPUT1"
