--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -11,12 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       output1: ${{ steps.step.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step
         uses: Wandalen/wretry.action@master
         with:
           attempt_limit: 3
           action: dmvict/test.action
+      - id: step2
+        uses: dmvict/test.action
+        with:
+          any: 3
 
   job2:
     runs-on: ubuntu-latest
@@ -24,4 +29,5 @@ jobs:
     steps:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
-        run: echo "$OUTPUT1"
+          OUTPUT2: ${{needs.job1.outputs.output2}}
+        run: echo "$OUTPUT1 $OUTPUT2"
