--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -14,7 +14,7 @@ jobs:
       output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step
-        uses: Wandalen/wretry.action@1.0.41
+        uses: Wandalen/wretry.action@v1.0.42
         with:
           attempt_limit: 3
           action: dmvict/test.action@master
