--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -22,6 +22,8 @@ jobs:
         uses: dmvict/test.action@master
         with:
           any: 3
+      - run: echo $GITHUB_OUTPUT
+      - run: cat $GITHUB_OUTPUT
 
   job2:
     runs-on: ubuntu-latest
