--- a/.github/workflows/Push2.yml
+++ b/.github/workflows/Push2.yml
@@ -14,6 +14,8 @@ jobs:
       output2: ${{ steps.step2.outputs.test }}
     steps:
       - id: step
+        env:
+          GITHUB_OUTPUT: ${{ github.output }}
         uses: Wandalen/wretry.action@v1.0.36
         with:
           attempt_limit: 3
